Closed Bug 71032 Opened 24 years ago Closed 24 years ago

printing www.msn.com crashes browser

Categories

(Core :: Printing: Output, defect, P1)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED
mozilla0.9

People

(Reporter: dcone, Assigned: dcone)

References

()

Details

Attachments

(6 files)

printing www.msn.com crashes browser. Looks like some sort of delete problem in layout. I have to reduce this test case.
Today's build does on WINNT does not crash for me. I think waterson@netscape.com recently checked in a fix related to blockcode reparenting views which may have fixed this. Marking fixed.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Tested on Win98 using 3/20 commercial build. Crash. Here is the stack trace: Stack Trace 0x0fdefe49 GKLAYOUT.DLL + 0x60196 (0x60340196) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x1d8b2 (0x602fd8b2) GKLAYOUT.DLL + 0x60196 (0x60340196) GKLAYOUT.DLL + 0x64dee (0x60344dee) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x1d8b2 (0x602fd8b2) GKLAYOUT.DLL + 0x60196 (0x60340196) GKLAYOUT.DLL + 0x90074 (0x60370074) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x1d8b2 (0x602fd8b2) GKLAYOUT.DLL + 0x30f11 (0x60310f11) GKLAYOUT.DLL + 0x296ee (0x603096ee) GKLAYOUT.DLL + 0x30f11 (0x60310f11) GKLAYOUT.DLL + 0x296ee (0x603096ee) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x1d8b2 (0x602fd8b2) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x1d8b2 (0x602fd8b2) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x1d8b2 (0x602fd8b2) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x1d8b2 (0x602fd8b2) GKLAYOUT.DLL + 0x4be28 (0x6032be28) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x1d8b2 (0x602fd8b2) GKLAYOUT.DLL + 0x49d8d (0x60329d8d) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x296e5 (0x603096e5) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x1d8b2 (0x602fd8b2) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x1d8b2 (0x602fd8b2) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x1d8b2 (0x602fd8b2) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x1d8b2 (0x602fd8b2) GKLAYOUT.DLL + 0x4be28 (0x6032be28) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x1d8b2 (0x602fd8b2) GKLAYOUT.DLL + 0x49d8d (0x60329d8d) GKLAYOUT.DLL + 0x30f11 (0x60310f11) GKLAYOUT.DLL + 0x296ee (0x603096ee) GKLAYOUT.DLL + 0x30f11 (0x60310f11) GKLAYOUT.DLL + 0x296ee (0x603096ee) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x1d8b2 (0x602fd8b2) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x1d8b2 (0x602fd8b2) GKLAYOUT.DLL + 0x5579 (0x602e5579) GKLAYOUT.DLL + 0x1d8b2 (0x602fd8b2) GKLAYOUT.DLL + 0x87de6 (0x60367de6) GKLAYOUT.DLL + 0x26d22 (0x60306d22) GKLAYOUT.DLL + 0x1707f (0x602f707f) GKLAYOUT.DLL + 0x16dde (0x602f6dde) GKLAYOUT.DLL + 0x8e990 (0x6036e990) nsEventQueueServiceImpl::GetThreadEventQueue [d:\builds\seamonkey\mozilla\xpcom\threads\nsEventQueueService.cpp, line 356] GKCONTENT.DLL + 0x5971 (0x601c5971) GKCONTENT.DLL + 0x6446 (0x601c6446) GKCONTENT.DLL + 0x6b7f (0x601c6b7f) LocationAssign [d:\builds\seamonkey\mozilla\dom\src\base\nsJSLocation.cpp, line 347] SetWindowProperty [d:\builds\seamonkey\mozilla\dom\src\base\nsJSWindow.cpp, line 1456] js_InitAtomState [d:\builds\seamonkey\mozilla\js\src\jsatom.c, line 272] Reopening bug. Also crashing on Mac
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Priority: -- → P1
we have a dupe bug entered on this under http://bugscape.netscape.com/show_bug.cgi?id=4284 You may want to check some comments in that bug report.
Keywords: nsbeta1
Can we get the bugscape bug dup'ed against this one, and any relevant and non-confidential comments copied into this bug? No point in reporting a bug against open source using a closed bugsystem. /be
every thing that we know about the problem has been moved here.
Attached file reduced test case
Attached file better test case
Attached file Better still test case
Ok, I think I tracked down the problem. The patch file I attached does three things: - removes some earlier hack that prevented views from being reparented - Checks the floater list to see if any of it's frames have views which need to be reparented - Detaches the view using using the pointer returned from GetParent instead of the incorrect value passed as an argument. Some layout guys need to look this over closely and it needs lots and lots of testing.
Didn't look at this too closely, but should we worry about absolutely positioned frames, too?
SPAM: thanks for tracking it down and proposing fix so quickly. You rock!
"should we worry about absolutely positioned frames, too?" Chris: I was wondering about that. Maybe I should cycle through all of the additional frame lists looking for views. I don't think we ever want to move a frame in the normal frame lists or any of the additional frame lists without moving their views. If we don't move the views then the frame tree and the view tree will be inconsistent. What do you think?
Yeah: I've been chasing bugs like that for months in the block-in-inline code. So maybe go ahead and look through the other frame lists as well.
The latest patch (28544) crashes when I print www.icq.com. It doesn't crash when I use original patch(28449). With the latest patch the view hierarchy is messed up for www.icq.com. Going through all of the child frames must migrate views that should not be migrated (Possibly the combobox?) I'm going to test just the original patch, since it fixes the msn.com crash and doesn't seem to cause any additional problems. I'll file a separate bug to investigate why we can't cycle through all of the child list frames when reparenting views.
ok, sr=waterson on patch 28449.
Taking bug.
Status: REOPENED → ASSIGNED
r=dcone
Status: ASSIGNED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
I didn't crash printing 50 of the top 100 using patch 28449. Don also ran his printing tests and approx 70% of the top 100 using the same patch and it didn't crash. Fixed checked into the trunk.
I filed a new bug to cover the fact that we do not cycle through all of the additional child lists for the frame when reparenting the views. bug 73188
Target Milestone: --- → mozilla0.9
I checked in the patch 28449 to both the trunk and the branch (MOZILLA_0_8_1_BRANCH).
Tested with 3/26 commercial build. No crash. Verified bug fixed.
Status: RESOLVED → VERIFIED
Blocks: 75664
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: