Removed code which prevented reparenting of views + added code to check floating child list when reparenting views bug 71032; sr = waterson@netscape.com; r=dcone@netscape.com